--- a/public/404.html
+++ b/public/404.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <style>
   .rails-default-error-page {
-    background-color: #EFEFEF;
+    background-color: #111;
     color: #2E2F30;
     text-align: center;
     font-family: arial, sans-serif;
@@ -58,10 +58,13 @@
   <!-- This file lives in public/404.html -->
   <div class="dialog">
     <div>
-      <h1>The page you were looking for doesn't exist.</h1>
+      <h1>T'as perdu la route de la soir&eacute;e!!</h1>
       <p>You may have mistyped the address or the page may have moved.</p>
     </div>
     <p>If you are the application owner check the logs for more information.</p>
+  </div>
+  <div class="image_gif">
+    <img src="images/lost-404.gif" alt="Lost">
   </div>
 </body>
 </html>
