--- a/public/404.html
+++ b/public/404.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>The page you were looking for doesn't exist (404)</title>
+  <title>Soir&eacute; NOT FOUND!</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <style>
   .rails-default-error-page {
-    background-color: #EFEFEF;
-    color: #2E2F30;
+    background-color: #171717;
     text-align: center;
     font-family: arial, sans-serif;
     margin: 0;
@@ -14,42 +13,32 @@
 
   .rails-default-error-page div.dialog {
     width: 95%;
-    max-width: 33em;
+    max-width: 53em;
     margin: 4em auto 0;
   }
 
   .rails-default-error-page div.dialog > div {
-    border: 1px solid #CCC;
-    border-right-color: #999;
-    border-left-color: #999;
-    border-bottom-color: #BBB;
-    border-top: #B00100 solid 4px;
-    border-top-left-radius: 9px;
-    border-top-right-radius: 9px;
-    background-color: white;
-    padding: 7px 12% 0;
-    box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
+    border: 3px solid #666;
+    background-color: #efefef;
+    padding: 7px;
+    margin-bottom: 10px
   }
 
   .rails-default-error-page h1 {
-    font-size: 100%;
-    color: #730E15;
+    font-size: 30px;
+    color: #EB6547;
     line-height: 1.5em;
   }
 
-  .rails-default-error-page div.dialog > p {
-    margin: 0 0 1em;
-    padding: 1em;
-    background-color: #F7F7F7;
-    border: 1px solid #CCC;
-    border-right-color: #999;
-    border-left-color: #999;
-    border-bottom-color: #999;
-    border-bottom-left-radius: 4px;
-    border-bottom-right-radius: 4px;
-    border-top-color: #DADADA;
-    color: #666;
-    box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
+  .rails-default-error-page div.dialog > img{
+    border: 3px solid #EB6547;
+    margin: 30px 0;
+    width: 300px;
+    height: 280px;
+  }
+
+  .rails-default-error-page a {
+    text-decoration: none;
   }
   </style>
 </head>
@@ -58,10 +47,14 @@
   <!-- This file lives in public/404.html -->
   <div class="dialog">
     <div>
-      <h1>The page you were looking for doesn't exist.</h1>
-      <p>You may have mistyped the address or the page may have moved.</p>
+      <h1>Il semble que t'as perdu la route pour ta soir&eacute;e...</h1>
     </div>
-    <p>If you are the application owner check the logs for more information.</p>
+      <img src="image/tenor.gif" alt="">
+    <a href="http://www.dionysoslapp.fr">
+      <div>
+        <h1>...il y a un chemin ici pour recomencer >></h1>
+      </div>
+    </a>
   </div>
 </body>
 </html>
