Add share social button to show

--- a/public/404.html
+++ b/public/404.html
@@ -47,7 +47,7 @@
   <!-- This file lives in public/404.html -->
   <div class="dialog">
     <div>
-      <h1>La route a ta soirée est perdu....</h1>
+      <h1>La route a ta soir&eacute;e est perdu....</h1>
     </div>
       <img src="image/tenor.gif" alt="">
     <a href="http://www.dionysoslapp.fr">
