--- a/public/404.html
+++ b/public/404.html
@@ -3,58 +3,22 @@
 <head>
   <title>Soir&eacute; NOT FOUND!</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <style>
-  .rails-default-error-page {
-    background-color: #171717;
-    text-align: center;
-    font-family: arial, sans-serif;
-    margin: 0;
-  }
-
-  .rails-default-error-page div.dialog {
-    width: 95%;
-    max-width: 53em;
-    margin: 4em auto 0;
-  }
-
-  .rails-default-error-page div.dialog > div {
-    border: 3px solid #666;
-    background-color: #efefef;
-    padding: 7px;
-    margin-bottom: 10px
-  }
-
-  .rails-default-error-page h1 {
-    font-size: 30px;
-    color: #EB6547;
-    line-height: 1.5em;
-  }
-
-  .rails-default-error-page div.dialog > img{
-    border: 3px solid #EB6547;
-    margin: 30px 0;
-    width: 600px;
-    height: 600px;
-  }
-
-  .rails-default-error-page a {
-    text-decoration: none;
-  }
-  </style>
+  <link rel="stylesheet" type="text/css" href="css/error-style.css">
+  <link href="https://fonts.googleapis.com/css?family=Permanent+Marker" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Oswald:300" rel="stylesheet">
 </head>
 
-<body class="rails-default-error-page">
+<body class="error-page">
   <!-- This file lives in public/404.html -->
   <div class="dialog">
-    <div>
-      <h1>La route a ta soir&eacute;e est perdu....</h1>
+    <div class="error-title">
+      <h1>Tu as perdu la route de ta soir&eacute;e</h1>
     </div>
-      <img src="image/tenor.gif" alt="">
-    <a href="http://www.dionysoslapp.fr">
-      <div>
-        <h1>...il y a un chemin ici pour recomencer >></h1>
-      </div>
-    </a>
+    <div class="return-button">
+      <a href="http://www.dionysoslapp.fr">
+        Retrouve la ici!
+      </a>
+    </div>
   </div>
 </body>
 </html>
